reduce padding for question text to avoid spillover

--- a/components/QuizQuestions/QuizQuestions.module.css
+++ b/components/QuizQuestions/QuizQuestions.module.css
@@ -25,8 +25,8 @@
 }
 .question {
   font-size: 3rem;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 50px;
+  padding-right: 50px;
   text-align: center;
   line-height: 1.5;
   max-height: 50%;
